# yet_another_llm_project_but_better

./: Cargo.toml  Insert the following lines immediately after obtaining (block_type, name, modifiers) inside fn parse_block  README.md  run_tests.sh  simple-test.xml  temp_fix.sh  test.md  test.xml  test_question.md
.cargo/: config.toml
docs/: extended_example.md  language_specification.md  language_tutorial.md
examples/: complex_test.md  test_document.md  watch_file.rs
meta/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
meta/syntaxes/: meta.tmLanguage.json
src/: file_watcher.rs  lib.rs  llm_client.rs  main.rs
src/executor/: cache.rs  document.rs  enhanced_variables.rs  error.rs  mod.rs  reference_resolver.rs  resolver.rs  state.rs  tests.rs
src/executor/runners/: code.rs  conditional.rs  mod.rs  question.rs  shell.rs
src/llm_client/: mod.rs  types.rs
src/parser/: block_parser.rs  debug_utils.rs  document_processor.rs  meta_language.pest  mod.rs  mod.rs.bak  xml_parser.rs
src/parser/block_parsers/: communication_blocks.rs  control_blocks.rs  data_blocks.rs  executable_blocks.rs  (+3 more)
src/tests/: test_executor.rs  test_variable_references.md
tests/: advanced_integration_test.rs  basic_data_test.md  basic_test.rs  communication_blocks_test.rs  complex_document_test.rs  complex_examples_test.rs  complex_workflow_test.rs  conditional_functionality_test.rs  conditional_test.xml  control_blocks_test.rs  data_management_test.rs  debug_variable_resolution.rs  debug_visualization_test.rs  dependencies_test.rs  edge_cases_test.rs  enhanced_variables.rs  error_handling_test.rs  executable_blocks_test.rs  executor_modules_test.rs  executor_results_test.rs  executor_test.rs  file_watcher_test.rs  file_watcher_tests.rs  lib.rs  modifiers_test.rs  parser_robust_test.rs  question_blocks_test.rs  results_block_test.rs  results_test.rs  section_parsing_test.rs  sections_test.rs  single_block_test.rs  template_modifiers_test.rs  template_test.rs  test_harness.rs  test_question_block.rs  variable_references_test.rs  variable_resolution_test.rs  variable_test.rs  xml_basic_test.rs  (+2 more)
(+12 files in other folders)
