[package]
name = "yet_another_llm_project_but_better"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "=2.5.7"
pest_derive = "=2.5.7"
notify = "=4.0.17"
regex = "=1.9.5"
serde = { version = "=1.0.188", features = ["derive"] }
serde_json = "=1.0.107"
thiserror = "=1.0.48"
anyhow = "=1.0.75"
tempfile = "=3.8.0"
rand = "=0.8.5"
half = "=1.8.2"
num-traits = "=0.2.15"
indexmap = "=1.9.3"

[features]
default = []

[dev-dependencies]
criterion = "=0.5.1"
proptest = "=1.2.0"
mockall = "=0.11.4"


[lib]
name = "yet_another_llm_project_but_better"
path = "src/lib.rs"

[patch.crates-io]
half = { version = "1.8.2" }

[workspace]
