[package]
name = "yet_another_llm_project_but_better"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "=2.5.7"
pest_derive = "=2.5.7"
notify = "=4.0.17"
regex = "=1.9.5"
serde = { version = "=1.0.188", features = ["derive"] }
serde_json = "=1.0.107"
thiserror = "=1.0.48"
anyhow = "=1.0.75"
tempfile = "=3.8.0"
rand = "=0.8.5"
half = "=1.8.2"  # Pin to exactly version 1.8.2
num-traits = "=0.2.15"
indexmap = "=1.9.3"
reqwest = { version = "0.11.17", features = ["json", "rustls-tls"], default-features = false }
async-trait = "0.1.73"
tokio = { version = "1.28.2", features = ["full"] }

[features]
default = []

[dev-dependencies]
# Temporarily commenting out criterion to avoid half crate version conflicts
# criterion = "=0.5.1"
proptest = "=1.2.0"
mockall = "=0.11.4"
mockito = "=1.1.0"


[lib]
name = "yet_another_llm_project_but_better"
path = "src/lib.rs"


[workspace]
